<resources>
    <string name="app_name">Crimeful</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crimeful">Crimeful</string>
    <string name="title">Title</string>
    <string name="wed_nov_14_11_56_est_2018">Wed Nov 14 11:56 EST 2018</string>
    <string name="choose_suspect">Choose Suspect</string>
    <string name="send_report">Send Report</string>
    <string name="solved">Solved</string>
    <string name="crime_title">Crime Title</string>
    <string name="crime_date">Crime Date</string>
    <string name="crimes_list">Crimes list:</string>
</resources>