<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_crimeful_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_inside"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="22dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/crimeful"
            android:textColor="@color/white"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/photo_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@color/white"
            app:shapeAppearanceOverlay="@style/RoundedCorners"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_app_name"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_username_create"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:alpha="1.0"
            android:hint="@string/title"
            android:textColorHint="@color/dark_grey"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/dark_grey"
            app:boxStrokeWidth="0.5dp"
            app:counterOverflowTextColor="@color/dark_grey"
            app:counterTextColor="@color/dark_grey"
            app:endIconMode="clear_text"
            app:endIconTint="@color/dark_grey"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/dark_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/crime_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/crime_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:inputType="textPersonName"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/dark_grey"
                android:textCursorDrawable="@color/dark_grey"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>





        <com.google.android.material.button.MaterialButton
            android:id="@+id/crime_date"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="424dp"
            android:width="300dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/wed_nov_14_11_56_est_2018"
            android:textColor="@color/orange_main"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@+id/choose_suspect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/orange_main"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/send_report"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/crime_solved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:buttonTint="@color/white"
            android:fontFamily="@font/roboto_medium"
            android:layoutDirection="rtl"
            android:text="@string/solved"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/photo_change_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/choose_suspect"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:width="300dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/choose_suspect"
            android:textColor="@color/orange_main"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@+id/materialButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/orange_main" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/photo_change_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_icon_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo_view"
            android:layout_marginTop="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>